--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,8 @@
    	<dependencies>
    		<dependency>
 	    <groupId>javax.servlet</groupId>
-	    <artifactId>servlet-api</artifactId>
-	    <version>2.5</version>
-    <scope>provided</scope>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.1.0</version>
 		</dependency>
    	</dependencies>
 </project>
